// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders 1`] = `
<div>
  <fieldset
    class="sui-facet"
  >
    <legend
      class="sui-facet__title"
    >
      A Facet
    </legend>
    <div
      class="sui-multi-checkbox-facet"
    >
      <label
        class="sui-multi-checkbox-facet__option-label"
        for="example_facet_A FacetfieldValue1"
      >
        <div
          class="sui-multi-checkbox-facet__option-input-wrapper"
        >
          <input
            class="sui-multi-checkbox-facet__checkbox"
            data-transaction-name="facet - A Facet"
            id="example_facet_A FacetfieldValue1"
            type="checkbox"
          />
          <span
            class="sui-multi-checkbox-facet__input-text"
          >
            fieldValue1
          </span>
        </div>
        <span
          class="sui-multi-checkbox-facet__option-count"
        >
          10
        </span>
      </label>
      <label
        class="sui-multi-checkbox-facet__option-label"
        for="example_facet_A FacetfieldValue2"
      >
        <div
          class="sui-multi-checkbox-facet__option-input-wrapper"
        >
          <input
            checked=""
            class="sui-multi-checkbox-facet__checkbox"
            data-transaction-name="facet - A Facet"
            id="example_facet_A FacetfieldValue2"
            type="checkbox"
          />
          <span
            class="sui-multi-checkbox-facet__input-text"
          >
            fieldValue2
          </span>
        </div>
        <span
          class="sui-multi-checkbox-facet__option-count"
        >
          5
        </span>
      </label>
    </div>
    <button
      aria-label="Show more options"
      class="sui-facet-view-more"
      type="button"
    >
      + More
    </button>
  </fieldset>
</div>
`;

exports[`renders falsey values correctly 1`] = `
<div>
  <fieldset
    class="sui-facet"
  >
    <legend
      class="sui-facet__title"
    >
      A Facet
    </legend>
    <div
      class="sui-multi-checkbox-facet"
    >
      <label
        class="sui-multi-checkbox-facet__option-label"
        for="example_facet_A Facet0"
      >
        <div
          class="sui-multi-checkbox-facet__option-input-wrapper"
        >
          <input
            class="sui-multi-checkbox-facet__checkbox"
            data-transaction-name="facet - A Facet"
            id="example_facet_A Facet0"
            type="checkbox"
          />
          <span
            class="sui-multi-checkbox-facet__input-text"
          >
            0
          </span>
        </div>
        <span
          class="sui-multi-checkbox-facet__option-count"
        >
          10
        </span>
      </label>
      <label
        class="sui-multi-checkbox-facet__option-label"
        for="example_facet_A Facetfalse"
      >
        <div
          class="sui-multi-checkbox-facet__option-input-wrapper"
        >
          <input
            class="sui-multi-checkbox-facet__checkbox"
            data-transaction-name="facet - A Facet"
            id="example_facet_A Facetfalse"
            type="checkbox"
          />
          <span
            class="sui-multi-checkbox-facet__input-text"
          >
            false
          </span>
        </div>
        <span
          class="sui-multi-checkbox-facet__option-count"
        >
          20
        </span>
      </label>
      <label
        class="sui-multi-checkbox-facet__option-label"
        for="example_facet_A Facet"
      >
        <div
          class="sui-multi-checkbox-facet__option-input-wrapper"
        >
          <input
            class="sui-multi-checkbox-facet__checkbox"
            data-transaction-name="facet - A Facet"
            id="example_facet_A Facet"
            type="checkbox"
          />
          <span
            class="sui-multi-checkbox-facet__input-text"
          />
        </div>
        <span
          class="sui-multi-checkbox-facet__option-count"
        >
          30
        </span>
      </label>
    </div>
    <button
      aria-label="Show more options"
      class="sui-facet-view-more"
      type="button"
    >
      + More
    </button>
  </fieldset>
</div>
`;

exports[`renders range filters 1`] = `
<div>
  <fieldset
    class="sui-facet"
  >
    <legend
      class="sui-facet__title"
    >
      A Facet
    </legend>
    <div
      class="sui-multi-checkbox-facet"
    >
      <label
        class="sui-multi-checkbox-facet__option-label"
        for="example_facet_A FacetThe first option"
      >
        <div
          class="sui-multi-checkbox-facet__option-input-wrapper"
        >
          <input
            class="sui-multi-checkbox-facet__checkbox"
            data-transaction-name="facet - A Facet"
            id="example_facet_A FacetThe first option"
            type="checkbox"
          />
          <span
            class="sui-multi-checkbox-facet__input-text"
          >
            The first option
          </span>
        </div>
        <span
          class="sui-multi-checkbox-facet__option-count"
        >
          1
        </span>
      </label>
      <label
        class="sui-multi-checkbox-facet__option-label"
        for="example_facet_A FacetThe second option"
      >
        <div
          class="sui-multi-checkbox-facet__option-input-wrapper"
        >
          <input
            class="sui-multi-checkbox-facet__checkbox"
            data-transaction-name="facet - A Facet"
            id="example_facet_A FacetThe second option"
            type="checkbox"
          />
          <span
            class="sui-multi-checkbox-facet__input-text"
          >
            The second option
          </span>
        </div>
        <span
          class="sui-multi-checkbox-facet__option-count"
        >
          11
        </span>
      </label>
    </div>
    <button
      aria-label="Show more options"
      class="sui-facet-view-more"
      type="button"
    >
      + More
    </button>
  </fieldset>
</div>
`;
